# unistore-django-ecommerce

./: .env  .env-example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
Unistore/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: apps.py  decorators.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_full_name.py
accounts/tests/: test_forms.py  test_models.py  test_urls.py  test_views..py  test_views.py
blog/: admin.py  apps.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_description.py  0003_alter_blog_description.py  0004_alter_blog_description.py
blog/tests/: test_models.py  test_urls.py  test_views.py
carts/: models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_remove_cartitems_total_items.py
checkout/: urls.py  views.py
contacts/: apps.py  forms.py  urls.py  views.py
docs/: conf.py  index.rst
docs/modules/: admin.rst  blog.rst  cart.rst  checkout.rst  contact.rst  home.rst  login.rst  order-now.rst  register.rst  store.rst
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
staff/: forms.py  urls.py  views.py
staff/tests/: test_forms.py  test_urls.py  test_views.py
store/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product_bought.py  0003_auto_20210730_1006.py  0004_alter_orders_payment.py  0005_alter_orders_user.py  0006_auto_20210803_1231.py  0007_auto_20210818_2051.py
store/templatetags/: cart.py
store/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
templates/: base.html  main.html
templates/about/: index.html
templates/accounts/: activate.html  password_reset.html  password_reset_done.html  password_reset_form.html  (+1 more)
users/: models.py  urls.py  views.py
(+80 files in other folders)
